# traintime_pda_ucas

./: .gitignore  README.md  flutter_integration.md  pubspec.yaml
.github/workflows/: build_all.yml  build_and_release.yml  build_android.yml  build_ios.yml  build_linux.yml  build_macos.yml  build_windows.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
assets/: captcha_model.keras
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/data/: cache_manager.dart  captcha_ocr.dart  login_helper.dart  rust_ocr.dart  settings_controller.dart  ucas_client.dart  ucas_client_old.dart
lib/logic/: course_robber.dart  course_selection_models.dart
lib/model/: exam.dart  lecture.dart  schedule.dart  score.dart  selected_course.dart
lib/services/: ocr_service.dart
lib/ui/: auto_select_page.dart  captcha_dialog.dart  course_detail_page.dart  course_reviews_page.dart  dashboard_page.dart  exam_page.dart  function_page.dart  home_shell.dart  lecture_detail_dialog.dart  lecture_page.dart  login_page.dart  schedule_grid.dart  schedule_page.dart  score_page.dart  settings_page.dart  splash_page.dart  submit_review_page.dart  webview_page.dart
lib/util/: schedule_utils.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
scripts/: build_android.ps1  train_captcha.py
web/: manifest.json
windows/: CMakeLists.txt
(+31 files in other folders)
