[package]
name = "rust_ocr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]


[dependencies]
ddddocr = { git = "https://github.com/86maid/ddddocr.git", branch = "master" }
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
libloading = "0.8"


